# embedding-translation

./: .gitignore  README.md  pyproject.toml  pytest.ini
reproduce-scripts/: README.md  harness.py
reproduce-scripts/hmoe/: exp_chaining.py  exp_mixing.py  exp_table1_90.py
reproduce-scripts/la2m/: exp_la2m.py  exp_la2m_matrix.py
scripts/repro/: diag_nemotron_target.py  exp_ablation.py  exp_chaining.py  exp_la2m.py  exp_la2m_matrix.py  exp_mixing.py  exp_mixing_ensemble.py  exp_mixing_procrustes.py  exp_mixing_procrustes_retr.py  exp_ood_fiqa_scifact.py  exp_sweep.py  exp_table1_90.py  harness.py
src/embedding_translation/: __init__.py
src/embedding_translation/analysis/: __init__.py
src/embedding_translation/cli/: __init__.py
src/embedding_translation/clustering/: __init__.py  base.py  manage.py  utils.py
src/embedding_translation/clustering/strategies/: __init__.py  kmeans.py  la2m_cluster.py
src/embedding_translation/config/: __init__.py  loader.py  models.py  settings.py
src/embedding_translation/core/: __init__.py  mapping.py
src/embedding_translation/core/utils/: __init__.py  creation.py  io.py  metrics.py  validation.py
src/embedding_translation/dataset/: __init__.py
src/embedding_translation/embedding/: __init__.py
src/embedding_translation/evaluation/: __init__.py  base.py  confidence.py
src/embedding_translation/loss/: __init__.py  common.py  contrastive_loss.py  distance.py  hierarchy_loss.py  lambda_rank_loss.py  margin_rank.py  ranking_losses.py  rcsls.py  spearman.py  triplet.py  util.py
src/embedding_translation/mapper/: __init__.py  manager.py  wrapper.py
src/embedding_translation/mapper/cca/: __init__.py  strategy.py
src/embedding_translation/mapper/gromov_wasserstein/: __init__.py  strategy.py
src/embedding_translation/mapper/hmoe/: __init__.py  _array_loader.py  base_mapper.py  expert_clusterer.py  gating_mechanism.py  router.py  tree_structure.py
src/embedding_translation/mapper/hmoe/core/: __init__.py  metrics.py  mlp.py  utils.py
src/embedding_translation/mapper/hmoe/flat/: __init__.py  mapper.py
src/embedding_translation/mapper/hmoe/hierarchical/: __init__.py  clusterer.py  mapper.py
src/embedding_translation/mapper/la2m/: __init__.py  strategy.py
src/embedding_translation/mapper/linear/: __init__.py  strategy.py
src/embedding_translation/mapper/nonlinear/: __init__.py  strategy.py
src/embedding_translation/mapper/procrustes/: __init__.py  strategy.py
src/embedding_translation/mapper/simple_linear/: __init__.py  strategy.py
src/embedding_translation/pipeline/: __init__.py
src/embedding_translation/reference/: __init__.py  base_split.py  la2m_split.py  manage.py
tests/hmoe/: test_internal_experts.py  test_ldir.py  test_tau_routing.py
tests/repro/: test_harness.py
(+6 files in other folders)
