[project]
name = "embedding-translation"
version = "0.1.0"
description = "Library for translating embeddings between vector spaces — unifies VectorMerge and VectorTranslation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Beining Yang", email = "suchunsv@outlook.com" }]
license = { text = "MIT" }

dependencies = [
    # Core ML.
    # torch is pinned to 2.4.x and routed to the cu118 index because the
    # Prefect worker pods inherit an older host NVIDIA driver (CUDA 12.0)
    # that cannot run torch's default CUDA-13 wheels. cu118 binaries are
    # forward-compatible with any driver >= 11.8.
    "torch>=2.4.0,<2.5",
    "numpy>=1.24.4",
    "einops>=0.8.0",
    "transformers>=4.42.2",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.8.0",
    "pot>=0.9.0",                  # Gromov-Wasserstein
    "psutil>=5.9.0",               # memory monitoring in GW strategy

    # Configuration — pydantic everywhere, no dataclass/dacite
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",

    # CLI / logging
    "typer>=0.16.0",
    "rich>=13.0.0",
    "loguru>=0.7.2",
    "tqdm>=4.67.1",
    "python-dotenv>=1.0.0",

    # Persistence
    "joblib>=1.3.0",

    # Experiment tracking + data versioning
    "wandb>=0.19.0",
    "dvc>=3.42.0",
    "dvc-s3>=3.2.0",

    # IR / evaluation
    "pytrec-eval>=0.5",

    # Plotting (used by analysis/)
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",

    # Datasets + embeddings — single source of truth
    "vectorbench @ git+https://github.com/DBgroup-Edinburgh/VectorBenchmark.git",
]

[project.optional-dependencies]
# Pipeline orchestration. Local-only; no k8s, no remote stacks.
pipeline = [
    "zenml[server]==0.84.1",
]

# Heavy embedding generators only needed when running them locally.
# vectorbench owns generation; this is an escape hatch.
generators = [
    "sentence-transformers>=2.7.0",
    "openai>=1.57.0",
    "mistralai>=1.2.5",
    "fasttext>=0.9.3",
    "gensim>=4.3.3",
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

docs = [
    "sphinx>=8.1.3",
    "furo>=2024.8.6",
]

[project.scripts]
etrans = "embedding_translation.cli:app"

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
